FIX nav not opening on mobile, tablet

--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -227,6 +227,14 @@
         right: initial;
       }
 
+      .logout_option:hover {
+        svg {
+          path {
+            fill:none;
+            stroke:var(--color-link);
+          }
+        }
+      }
       #loggend_in_as_wrap {
         display: flex;
         flex-direction: column;
